--- a/exercises/1.1/index.html
+++ b/exercises/1.1/index.html
@@ -1240,14 +1240,20 @@ If you toggle the Proxy Switcher to route traffic to Burp and Burp is not runnin
 </li>
 <li>
 <p>Click "Forward".</p>
-<details class="question"><summary>What error message does Chrome display?</summary><p>400 Bad Request</p>
+<details class="question">
+<summary>What error message does Chrome display?</summary>
+<p>400 Bad Request</p>
 </details>
 </li>
 <li>
 <p>In Burp, select the "HTTP history" from the "Proxy" tab and select the last line to answer the next few questions. The last line should represent the request you just edited. You will find the answers by selecting the "Response" tab in the middle of the Burp window.</p>
-<details class="question"><summary>What status code did the server use to respond?</summary><p>400</p>
+<details class="question">
+<summary>What status code did the server use to respond?</summary>
+<p>400</p>
 </details>
-<details class="question"><summary>What server version was used?</summary><p>Apache/2.4.38 (Debian)</p>
+<details class="question">
+<summary>What server version was used?</summary>
+<p>Apache/2.4.38 (Debian)</p>
 </details>
 </li>
 <li>
