--- a/exercises/2.1/index.html
+++ b/exercises/2.1/index.html
@@ -1160,7 +1160,9 @@ fetch('http://phpbb.sans.labs:80');
 <p>You may try other queries now.</p>
 </li>
 </ol>
-<details class="question"><summary>Can you create a query without the '--' in the end?</summary><p>Answer: <strong>' OR 1='1</strong></p>
+<details class="question">
+<summary>Can you create a query without the '--' in the end?</summary>
+<p>Answer: <strong>' OR 1='1</strong></p>
 </details>
 <p>The challenge in NetWars pertains to this input form. If necessary, NetWars can offer hints at a cost of some points.</p>
 <hr />
