--- a/exercises/2.2/index.html
+++ b/exercises/2.2/index.html
@@ -1008,7 +1008,9 @@ fetch('https://lab-2.2.sans.labs:80');
 <p>Switch back once again to the other window with <strong><a href="http://lab-2.2.sans.labs/guestbook.php">http://lab-2.2.sans.labs/guestbook.php</a></strong> and log in with "sec522" and "training" as username/password.</p>
 </li>
 </ol>
-<details class="question"><summary>How come no extra entry is added this time?</summary><p>If the session is not active (the user logged out), the attack simply doesn't work.</p>
+<details class="question">
+<summary>How come no extra entry is added this time?</summary>
+<p>If the session is not active (the user logged out), the attack simply doesn't work.</p>
 </details>
 <p>Please review the challenge on NetWars related to this section. </p>
 <hr />
