--- a/exercises/2.3/index.html
+++ b/exercises/2.3/index.html
@@ -1157,7 +1157,9 @@ fetch('https://lab-2.3.sans.labs:80');
 </li>
 <li>
 <p>Select the "Network" tab. </p>
-<details class="question"><summary>Do you see any requests when you submit the search? Why not?</summary><p>The exploit in Step 4 works. This is DOM-based XSS that does not require data to be transferred to the server (Step 6: you will not see a network connection).</p>
+<details class="question">
+<summary>Do you see any requests when you submit the search? Why not?</summary>
+<p>The exploit in Step 4 works. This is DOM-based XSS that does not require data to be transferred to the server (Step 6: you will not see a network connection).</p>
 </details>
 </li>
 </ol>
