--- a/exercises/2.4/index.html
+++ b/exercises/2.4/index.html
@@ -1117,7 +1117,9 @@ fetch('https://lab-2.4.sans.labs:80');
 <li>
 <p>Paste the domain name into the green "Mixed Input" field. The output of the "Unicode U+hex" field usually gives away any non-ASCII characters.</p>
 <p>The "IDN Converter", linked from the question page, can also help identify Unicode domain names.</p>
-<details class="question"><summary>Solutions</summary><p>You can find the solutions at this location <a href="http://lab-2.4.sans.labs/unicode-solutions.htm">http://lab-2.4.sans.labs/unicode-solutions.htm</a></p>
+<details class="question">
+<summary>Solutions</summary>
+<p>You can find the solutions at this location <a href="http://lab-2.4.sans.labs/unicode-solutions.htm">http://lab-2.4.sans.labs/unicode-solutions.htm</a></p>
 </details>
 </li>
 </ol>
@@ -1163,7 +1165,9 @@ fetch('https://lab-2.4.sans.labs:80');
 </li>
 <li>
 <p>Click the link for "hackercat.php.1".</p>
-<details class="question"><summary>What is being displayed on-screen?</summary><p>At the top of the page, there are some corrupted characters and then followed by the PHP environment details. To understand the content displayed on the screen and what is going on behind the scene, we need to review the file we uploaded to the server.</p>
+<details class="question">
+<summary>What is being displayed on-screen?</summary>
+<p>At the top of the page, there are some corrupted characters and then followed by the PHP environment details. To understand the content displayed on the screen and what is going on behind the scene, we need to review the file we uploaded to the server.</p>
 </details>
 </li>
 <li>
