--- a/exercises/1.4/index.html
+++ b/exercises/1.4/index.html
@@ -949,7 +949,7 @@ fetch('https://lab-1.4.sans.labs:80');
 </code></pre></div>
 
 <blockquote>
-<p>This exercise simulates a cloud compromise due to SSRF vulnerability. You will first exploit the SSRF vulnerability, and then use the retrieved data to access a cloud storage service. You should understand how SSRF can be used to expose internal services and how that information can be used for additional compromise.</p>
+<p>This exercise simulates a cloud compromise due to SSRF vulnerability. You will first exploit the SSRF vulnerability and then use the retrieved data to access a cloud storage service. It helps if you understand how SSRF can expose internal services and how that information can be used for additional compromise.</p>
 </blockquote>
 <h4 id="requirements">Requirements</h4>
 <ul>
@@ -964,35 +964,35 @@ fetch('https://lab-1.4.sans.labs:80');
 <p>Open <a href="http://lab-1.4.sans.labs/ssrf.php">http://lab-1.4.sans.labs/ssrf.php</a> in a browser. The page will allow you to add RSS feed URLs. The server will retrieve the feed without validating the source.</p>
 </li>
 <li>
-<p>To test it, enter <a href="http://lab-1.4.sans.labs/">http://lab-1.4.sans.labs/</a> as a URL in the Feed URL. You will see the HTML content of the page being retrieved and displayed.</p>
+<p>To test it, enter <a href="http://lab-1.4.sans.labs/">http://lab-1.4.sans.labs/</a> as a URL in the Feed URL. You will see the HTML content of the page as it is retrieved and displayed.</p>
 </li>
 <li>
-<p>There is a meta-data server at 169.254.169.254. Retrieve its index by using <a href="http://169.254.169.254">http://169.254.169.254</a> as "Feed URL".</p>
+<p>There is a meta-data server at 169.254.169.254. Retrieve its index by using <a href="http://169.254.169.254">http://169.254.169.254</a> as "Feed URL."</p>
 </li>
 <li>
-<p>Explore the content of the service by retrieving the content of directories (e.g. <a href="http://169.254.169.254/latest">http://169.254.169.254/latest</a> ).</p>
+<p>Explore the content of the service by retrieving the content of directories (e.g., <a href="http://169.254.169.254/latest">http://169.254.169.254/latest</a> ).</p>
 </li>
 <li>
-<p>The server uses a special local URL for meta data like authentication tokens. Try this URL (important: do not forget the slash in the end).</p>
+<p>The server uses a local URL for metadata like authentication tokens. Try this URL (important: do not forget the slash at the end).</p>
 <p><a href="http://169.254.169.254/latest/meta-data/iam/security-credentials/cg-ec2-role-cgidmxg5qsmw9b/">http://169.254.169.254/latest/meta-data/iam/security-credentials/cg-ec2-role-cgidmxg5qsmw9b/</a></p>
 </li>
 <li>
 <p>Copy the entire response (including the enclosing { } ) to a file called "/home/student/.sawssecret". You can do this either with the terminal or with Visual Studio Code.</p>
 </li>
 <li>
-<p>Open a terminal and run "s-aws" to gain access to the storage repository. "s-aws" reads credentials from the /home/student/.sawssecret file. The content of the file you retrieve using the "s-aws" command should help you to solve the NetWars challenge for this section.</p>
+<p>Open a terminal and run "s-aws" to access the storage repository. "s-aws" reads credentials from the /home/student/.sawssecret file. The content of the file you retrieve using the "s-aws" command should help you solve the NetWars challenge for this section.</p>
 </li>
 </ol>
 <hr />
 <h2 id="conclusion">Conclusion</h2>
 <ul>
-<li>SSRF can lead to the web server becoming a relay point for sending a HTTP request on behalf of the client. Since the request is sent by the Web server, it could access resources that are only accessible to the Web server such as DMZ or internal network resources.</li>
-<li>In public Cloud environment, specifically the Infrastructure as a Service Computing, the orign of the HTTP request matters a great deal. Through SSRF attacks, it is possible to acquire credentials for the Virtual Machine that the web application is running on and then pivot over to attack/access other Cloud based components.</li>
+<li>SSRF can lead to the webserver becoming a relay point for sending an HTTP request on behalf of the client. Since the webserver sends the request, it could access resources only accessible to the Web server, such as DMZ or internal network resources.</li>
+<li>In public Cloud environments, specifically the Infrastructure as a Service Computing, the origin of the HTTP request matters a great deal. Through SSRF attacks, it is possible to acquire credentials for the Virtual Machine that the web application is running on and then pivot over to attack/access other Cloud-based components.</li>
 </ul>
 <hr />
 <h2 id="explore-further">Explore Further</h2>
 <ul>
-<li>Look up the IMDS (Instance Metadata Service) in Cloud Security Provider and determine if they are vulnerable to similar type of flaws.</li>
+<li>Look up the IMDS (Instance Metadata Service) provided by Cloud Security Providers and determine if they are vulnerable to similar flaws.</li>
 </ul>
                 
                   
