--- a/exercises/3.1/index.html
+++ b/exercises/3.1/index.html
@@ -1084,7 +1084,7 @@
 </blockquote>
 <h5 id="part-3">Part 3:</h5>
 <blockquote>
-<p>In this exercise, you will walk through the use of U2F (Universal Two-Factor) tokens for two factor authentication. We use a software simulation of a token (softu2f). After registering and testing the token, we will experiment with a method to bypass the use of the token.</p>
+<p>In this exercise, you will walk through the use of U2F (Universal Two-Factor) tokens for two-factor authentication. We use a software simulation of a token (softu2f). After registering and testing the token, we will experiment with a method to bypass the use of the token.</p>
 </blockquote>
 <h4 id="requirements">Requirements</h4>
 <ul>
@@ -1107,37 +1107,37 @@
 <p>Reload the page in the browser.</p>
 </li>
 <li>
-<p>The request will now be held by Burp. Use Burp to modify the request and change the User-Agent to "CatBrowser".</p>
+<p>Burp will now hold the request. Use Burp to modify the request and change the User-Agent to "CatBrowser."</p>
 </li>
 <li>
 <p>Click "Forward" in Burp. The modified request will now be sent, and Chrome should display the page with a thank you statement for using the SANS browser.</p>
 </li>
 </ol>
-<p>The response should provide the necessary information for you to solve the challenge in NetWars. As usual, hints is available via NetWars if necessary.</p>
+<p>The response should provide the necessary information for you to solve the challenge in NetWars. As usual, hints are available via NetWars if necessary.</p>
 <hr />
 <h2 id="part-1-more-complex-but-still-weak-authentication">Part 1: More Complex, But Still Weak, Authentication</h2>
 <ol>
 <li>
-<p>Ensure that the Chrome is set to sending all browser traffic through Burp - the ProxySwitcher in Chrome should be "red" in color.</p>
+<p>Ensure that Chrome is set to sending all browser traffic through Burp - the ProxySwitcher in Chrome should be "red" in color.</p>
 </li>
 <li>
 <p>Open <a href="http://lab-3.1.sans.labs/ua2auth.php">http://lab-3.1.sans.labs/ua2auth.php</a> in Chrome. </p>
 </li>
 <li>
-<p>Switch over to Burp and allow all traffic to pass without modification. Keep clicking on "<strong>Forward</strong>" in Burp's Proxy Intercept. This page looks just like the page we examined in the exercise above but there seems to be some subtle difference.</p>
+<p>Switch over to Burp and allow all traffic to pass without modification. Keep clicking on "<strong>Forward</strong>" in Burp's Proxy Intercept. This page looks like the page we examined in the exercise above, but there seems to be some subtle difference.</p>
 </li>
 <li>
-<p>To inspect this previous request, in Burp, we change over to the "<strong>Target</strong>" tab.</p>
+<p>To inspect this previous request, we change over to the "<strong>Target</strong>" tab in Burp.</p>
 </li>
 <li>
-<p>Look for the most request to "ua2auth.php" and click on it. At the bottom pane of the Burp window is the response details. Due to the window sizing, you might have to adjust the pane to let the response be visible. There is the "three dots symbol" that allow you to adjust the pane sizes. In the response section, you will see the browser cookie being set by the server. We will need to get rid of this cookie in order to get to the website.</p>
+<p>Look for the most request to "ua2auth.php" and click on it. At the bottom pane of the Burp window are the response details. Due to the window sizing, you might have to adjust the pane to let the response be visible. The "three dots symbol" allows you to adjust the pane sizes. In the response section, the server sets the browser cookie. We will need to get rid of this cookie to get to the website.</p>
 <p><img alt="" class="zoom" src="media/img-1615789856-20210315.png" /></p>
 </li>
 <li>
 <p>Switch back to Chrome and reload the page.</p>
 </li>
 <li>
-<p>The request will now be held by Burp. Use Burp to modify the request and change the User-Agent to "DOGBrowser" and also to delete the cookie line. Make sure there are no blank lines in between the HTTP headers. </p>
+<p>Burp will now hold the request. Use Burp to modify the request, change the User-Agent to "DOGBrowser," and delete the cookie line. Make sure there are no blank lines in between the HTTP headers. </p>
 </li>
 <li>
 <p>Click "Forward" for all the following requests. You will then see the protected page.</p>
@@ -1145,48 +1145,48 @@
 </ol>
 <details class="question">
 <summary>What trick did the developer play to harden the page? Was it sufficient?</summary>
-<p>The developer coded the authentication such that when the "wrong" browser connect to the webpage, the application provides a cookie to the browser so that the application can reference the use of "wrong" browser in subsequent requests. </p>
+<p>The developer coded the authentication such that when the "wrong" browser connects to the webpage, the application provides a cookie to the browser so that the application can reference the use of the "wrong" browser in subsequent requests. </p>
 </details>
 <hr />
 <h2 id="part-2-brute-forcing">Part 2: Brute Forcing</h2>
-<p>This is an additional challenge exercise on authentication building on the knowledge you acquired so far. This exercise is to simulate a registration system where there is personal information being stored.</p>
+<p>This is an additional challenge exercise on authentication, building on the knowledge you have acquired. This exercise is to simulate a registration system where there is personal information is stored.</p>
 <ol>
 <li>
-<p>Configure Chrome to bypass the Burp proxy via the Proxy Switcher plugin. The icon should be black in color.</p>
+<p>Configure Chrome to bypass the Burp proxy via the Proxy Switcher plugin. The icon should be black.</p>
 </li>
 <li>
 <p>Browse to <a href="http://lab-3.1.sans.labs/donations.php">http://lab-3.1.sans.labs/donations.php</a></p>
-<p>The page has a lookup system where the user can review their own respective donation information. The objective is to acquire as much information from this system as possible.</p>
+<p>The page has a lookup system where the user can review their respective donation information. The objective is to acquire as much information from this system as possible.</p>
 <p>Use the following hints to help you:</p>
 <details class="hint">
-<summary>Hint #1</summary>
-<p>What's the likely user-agent for "DOGBrowser"? </p>
+<summary>Hint #1.</summary>
+<p>What's the likely user agent for "DOGBrowser"? </p>
 </details>
 <details class="hint">
-<summary>Hint #1</summary>
+<summary>Hint #1.</summary>
 <p>What's the purpose of the cookie "browser"? </p>
 </details>
 <details class="hint">
-<summary>Hint #2</summary>
+<summary>Hint #2.</summary>
 <p>Can you brute force the donation number? Scripting may help.</p>
 </details>
 <details class="hint">
-<summary>Hint #3</summary>
-<p>You can use the "Intruder" feature in Burp to assist with brute forcing the solution.</p>
+<summary>Hint #3.</summary>
+<p>You can use the "Intruder" feature in Burp to assist with brute-forcing the solution.</p>
 </details>
 </li>
 <li>
-<p>The page asks for a donation ID. Guess one (maybe 1) and click "Send". The server does not seem to respond to this. </p>
+<p>The page asks for a donation ID. Guess one (maybe 1) and click "Send." The server does not seem to respond to this. </p>
 </li>
 <li>
-<p>Let's inspect it in details. Configure Chrome to use Burp proxy via the Proxy Switcher and then reload the page.</p>
+<p>Let's inspect it in detail. Configure Chrome to use Burp proxy via the Proxy Switcher and reload the page.</p>
 </li>
 <li>
-<p>In the Burp intercept window, edit the request so that the User-Agent in the request is "DOGBrowser". Also eliminate the <strong>browser=wrong</strong> cookie by deleting it.</p>
+<p>In the Burp intercept window, edit the request so that the User-Agent in the request is "DOGBrowser." Also, eliminate the <strong>browser=wrong</strong> cookie by deleting it.</p>
 <p><img alt="" class="zoom" src="media/img-1615961787-20210317.png" /></p>
 </li>
 <li>
-<p>The system should indicatet that the ID does not exist. You still need to guess a donation ID. There are different ways to do this. We will use Burp in this example.</p>
+<p>The system should indicate that the ID does not exist. You still need to guess a donation ID. There are different ways to do this. We will use Burp in this example.</p>
 </li>
 <li>
 <p>Select the Proxy-&gt;HTTP history tab in Burp and right-click on the last request for donations.php</p>
@@ -1196,7 +1196,7 @@
 <p>Send Request to Intruder</p>
 </li>
 <li>
-<p>Select "Send to Intruder".</p>
+<p>Select "Send to Intruder."</p>
 </li>
 <li>
 <p>Click on the "Intruder" tab (it should now be highlighted in orange).</p>
@@ -1208,7 +1208,7 @@
 <p>Click the "Clear §" button. This will clear the auto-selected payload positions.</p>
 </li>
 <li>
-<p>Highlight the digit after <strong>donationid=</strong>, and click the "Add §" button. This will mark the digits for brute forcing. Also, verify the User-Agent ("DOGBrowser") and make sure the "Browser=wrong" cookie is removed.</p>
+<p>Highlight the digit after <strong>donationid=</strong>, and click the "Add §" button. This will mark the numbers for brute-forcing. Also, verify the User-Agent ("DOGBrowser") and make sure the "Browser=wrong" cookie is removed.</p>
 <p><img alt="" class="zoom" src="media/img-1615962113-20210317.png" /></p>
 <p><strong>Marking Position for Intruder</strong></p>
 </li>
@@ -1219,13 +1219,13 @@
 <p>Select "Numbers" from the Payload type dropdown (you may have to scroll down).</p>
 </li>
 <li>
-<p>Select "1" as "From", 100 as "To" , "1" as "Step" and 0 as maximum fraction digits (do not select a larger range, as the Burp Community Edition does rate-limit these requests).</p>
+<p>Select "1" as "From," 100 as "To," "1" as "Step," and 0 as maximum fraction digits (do not select a larger range, as the Burp Community Edition does rate-limit these requests).</p>
 </li>
 <li>
 <p>Click "Start attack" and acknowledge the restrictions of the community edition.</p>
 </li>
 <li>
-<p>You do not have to wait for the attack to finish. Look for requests with unusual values in the "Length" column and click on them. The larger responses are the ones we are interested in. Select the "Response" and "Render" tab at the bottom to review the response. For successful requests, you should see personal information displayed as part of the response. Request 6 and 17 (and many others) will show positive results. You may need to scroll up in the result window to see the early responses.</p>
+<p>You do not have to wait for the attack to finish. Look for requests with unusual values in the "Length" column and click on them. The larger responses are the ones we are interested in. Select the "Response" and "Render" tab at the bottom to review the response. You should see personal information displayed as part of the response for successful requests. Request 6 and 17 (and many others) will show positive results. You may need to scroll up in the result window to see the early responses.</p>
 <p><img alt="" class="zoom" src="media/img-1615962378-20210317.png" /></p>
 <p><strong>Intruder Result</strong></p>
 </li>
@@ -1233,17 +1233,17 @@
 <hr />
 <h2 id="part-3-u2f-and-bypassing-2nd-factor">Part 3: U2F And Bypassing 2<sup>nd</sup> Factor</h2>
 <h3 id="no-hints">No Hints</h3>
-<p>Start at <a href="https://lab-3.1.sans.labs/login.php">https://lab-3.1.sans.labs/login.php</a> . Click "Reset U2F Data". Next log in and follow the instructions to setup the token. Once you setup and verified that the token is working: Try to reach the "myaccount.php" without using the token (just use the username and password).</p>
+<p>Start at <a href="https://lab-3.1.sans.labs/login.php">https://lab-3.1.sans.labs/login.php</a>. Click "Reset U2F Data". Next, log in and follow the instructions to set up the token. Once you set up the token and verify that the token is working, try to reach the "myaccount.php" without using the token (use the username and password).</p>
 <h3 id="step-by-step">Step by Step</h3>
 <ol>
 <li>
 <p>Open <a href="https://lab-3.1.sans.labs/login.php">https://lab-3.1.sans.labs/login.php</a> in Google Chrome.</p>
 </li>
 <li>
-<p>Click on "Reset U2F Data" (lower left corner of the page).</p>
+<p>Click on "Reset U2F Data" (lower-left corner of the page).</p>
 </li>
 <li>
-<p>Login using the username "sec522" and the password "training". You will see a popup at the top of the browser asking you to "Approve" the use of the virtual U2F token.</p>
+<p>Login using the username "sec522" and the password "training." You will see a popup at the top of the browser asking you to "Approve" the use of the virtual U2F token.</p>
 <p><img alt="" src="media/image4.png" /></p>
 <p><strong>U2F Dialog</strong></p>
 </li>
@@ -1254,38 +1254,38 @@
 <p>Click on "Log Out". You will be redirected to the login page.</p>
 <div class="admonition information">
 <p class="admonition-title">Information</p>
-<p>At this point, we have registered a token with the server. There is a key pair generated and the server is storing the key information so that it can be used in the futue to authenticate the user when the user login. </p>
-<p>You may have noticed that you have to click on the token approval earlier. This is a design of Fido2 compatible tokens (whether it's the Android OS, iOS, keyfobs) they all require explicit user approval to avoid accidental and unintentional approvals.</p>
+<p>At this point, we have registered a token with the server. There is a key pair generated, and the server is storing the key's information to be used in the future to authenticate the user when the user logs in. </p>
+<p>You may have noticed that you are required to click on the token's "Approval" button earlier. FIDO2 compliant tokens must include an interaction like this (whether it is the Android OS, iOS, or a keyfob). They all require explicit user approval to avoid accidental and unintentional approvals.</p>
 </div>
 </li>
 <li>
-<p>Login again using username "sec522" and password "training".</p>
+<p>Login again using username "sec522" and password "training."</p>
 </li>
 <li>
 <p>Again, you will be asked to approve the use of the U2F token</p>
 </li>
 <li>
 <p>You are now reaching the "My Account" page.</p>
-<p>So far, you learned how to use a U2F token. For a physical token, you would have to pres a button instead of clicking "Approve". Next, we will learn how to bypass the token request.</p>
+<p>So far, you have learned how to use a U2F token. If using a physical token, you would have to press a button instead of clicking "Approve." Next, we will learn how to bypass the token request.</p>
 </li>
 <li>
 <p>Click "Log Out" again.</p>
 </li>
 <li>
-<p>Verify that you are actually logged out: Try to open <a href="https://lab-3.1.sans.labs/myaccount.php">https://lab-3.1.sans.labs/myaccount.php</a> in the browser. You will be redirected to the login page.</p>
+<p>Verify that you are logged out: Try to open <a href="https://lab-3.1.sans.labs/myaccount.php">https://lab-3.1.sans.labs/myaccount.php</a> in the browser. You will be redirected to the login page.</p>
 </li>
 <li>
-<p>Login using the username "sec522" and the password "training". You will be prompted for the U2F token again.</p>
+<p>Login using the username "sec522" and the password "training." You will be prompted for the U2F token again.</p>
 </li>
 <li>
 <p>Decline the U2F token request, deny the U2F token and cancel the browser's authentication prompt. </p>
 </li>
 <li>
 <p>Open <a href="https://lab-3.1.sans.labs/myaccount.php">https://lab-3.1.sans.labs/myaccount.php</a> in Chrome. You will be able to access the page. You just accessed the "My Account" page without using the U2F token, bypassing the two-factor authentication requirement.</p>
-<p>The application logged you in after you entered the username and password. This often happens if the U2F authentication is added later. A better solution would not associate the users user id with the session until the U2F process is complete, or set a flag with the session that the U2F authentication has not yet completed.</p>
+<p>The application logged you in after you entered the username and password. This often happens if the U2F authentication is added later. A better solution would not associate the user's user id with the session until the U2F process is complete or set a flag with the session that the U2F authentication has not yet completed.</p>
 <details class="bug">
-<summary>If all else fails</summary>
-<p>This exercise required the use of a Linux U2F token software for authentication, this is used in lieu of a real Fido2 token (Fido2 is backward compatible with U2F). If resetting of the token software is need, please run the following command in the terminal window.</p>
+<summary>If all else fails.</summary>
+<p>This exercise requires the use of a Linux U2F token software for authentication. The "softu2f" taken is used instead of an actual Fido2 token. If resetting the token software is needed, please run the following command in the terminal window.</p>
 <div class="codehilite"><pre><span></span><code>systemctl --user restart softu2f
 </code></pre></div>
 
@@ -1295,8 +1295,8 @@
 <hr />
 <h2 id="conclusion">Conclusion</h2>
 <ul>
-<li>There are various ways to authenticate users and some are more secure than others</li>
-<li>Authentication needs to be based on 1. something you know 2. something you have 3. something you are; or a combination of those three things. Authentication would be insecure if the data it is relied upon can easily be forged.</li>
+<li>There are various ways to authenticate users, and some are more secure than others</li>
+<li>Authentication needs to be based on 1. something you know, 2. something you have, 3. something you are, or a combination of those three things. Authentication would be insecure if the data relied upon could easily be forged.</li>
 </ul>
 <hr />
 <h2 id="explore-further">Explore Further</h2>
