--- a/exercises/2.3/index.html
+++ b/exercises/2.3/index.html
@@ -1156,7 +1156,7 @@ fetch('https://lab-2.3.sans.labs:80');
 <p>Open the JSON file by loading the URL in a new browser window. Identify the exploit line (note the "animal ID." This will be the answer for the netwars quiz).</p>
 </li>
 <li>
-<p>Open the JavaScript file that renders the table: <a href="http://lab-2.3.sans.labs/js/partner0.js">http://lab-2.3.sans.labs/js/partner0.js</a>. Become familiar with the code.</p>
+<p>Open the JavaScript file that renders the table: <a href="http://lab-2.3.sans.labs/js/partner0.js">http://lab-2.3.sans.labs/js/partner0.js</a>. (Click to open in new tab) Become familiar with the code.</p>
 </li>
 <li>
 <p>We will remove the word "script" from the data as a first fix. Click on "Fix 1" to load the page implementing that fix.</p>
